--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <p>Features:</p>
 <p>
 <ul>
-<li>store up to 12 phone numbers </li>
-<li>use individual nicknames </li>
+<li>store up to 12 names and phone numbers </li>
 <li>independent from your address book </li>
+<li>use individual nicknames </li>
 <li>change colors by shaking your iPhone</li>
-<li>no ads </li>
+<li>no ads</li>
 </ul>
 </p>
 <p>Screenshot:</p>
